[package]
name = "pine"
version = "0.1.0"
edition = "2021"
description = "CLI for managing squid deployments to the Aquarium hosted service"
license = "MIT"
homepage = "github.com/schlanqe/pine"

[dependencies]
anyhow.workspace = true
clap.workspace = true
dirs.workspace = true
open.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
api = { version = "0.1.0", path = "./api" }
commands = { version = "0.1.0", path = "./commands" }
config = { version = "0.1.0", path = "./config" }

[workspace.dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.16", features = ["derive"] }
dirs = "5.0.1"
open = "5.0.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }

[workspace]
members = [
    "api",
    "commands",
    "config",
]
